--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="TextViewSplashTitle">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">@dimen/font_size_splash_title</item>
+        <item name="android:gravity">center</item>
+        <item name="android:text">@string/app_name</item>
+    </style>
+
     <style name="EditTextBase">
         <item name="met_floatingLabel">highlight</item>
         <item name="met_singleLineEllipsis">true</item>
