--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,9 @@
     <color name="colorAccent">#FF5722</color>
     <color name="colorAccentDark">#DC4B1E</color>
 
+    <color name="textColorPrimary">#212121</color>
+    <color name="textColorSecondary">#757575</color>
+
     <color name="green">#FF4CAF50</color>
     <color name="white">#FFFFFFFF</color>
     <color name="black">#FF000000</color>
