--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,5 +52,17 @@
         <item name="pb_textProgress">@string/loading</item>
     </style>
 
+    <style name="FABHome">
+        <item name="fabSize">normal</item>
+        <item name="rippleColor">@color/colorAccent</item>
+        <item name="android:src">@mipmap/ic_party_mode_white</item>
+    </style>
+
+    <style name="CounterTextViewStyle">
+        <item name="android:textSize">@dimen/font_size_xxsmall</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 
 </resources>
