--- a/app/src/main/res/layout/widget_post_actionbar.xml
+++ b/app/src/main/res/layout/widget_post_actionbar.xml
@@ -8,7 +8,7 @@
     android:weightSum="3">
 
     <TextView
-        style="@style/CounterTextViewStyle"
+        style="@style/TextViewCounter"
         android:id="@+id/post_like"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
         tools:text="200k"/>
 
     <TextView
-        style="@style/CounterTextViewStyle"
+        style="@style/TextViewCounter"
         android:id="@+id/post_comment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
         tools:text="42k"/>
 
     <TextView
-        style="@style/CounterTextViewStyle"
+        style="@style/TextViewCounter"
         android:id="@+id/post_share"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
