--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="create_post_title_max_lines">3</integer>
+    <integer name="comment_max_lines">3</integer>
+    <integer name="comment_max_length">100</integer>
 </resources>
